--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -15,10 +15,7 @@
         {
           "category": "function",
           "resourceName": "getPaperInfo",
-          "attributes": [
-            "Name",
-            "Arn"
-          ]
+          "attributes": ["Name", "Arn"]
         }
       ]
     }
