Revert "Run prettier"
This reverts commit 90bdab4a5d629901cf1baee1bc656079770b2b01.

Revert plop_templates prettier

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -15,7 +15,10 @@
         {
           "category": "function",
           "resourceName": "getPaperInfo",
-          "attributes": ["Name", "Arn"]
+          "attributes": [
+            "Name",
+            "Arn"
+          ]
         }
       ]
     }
