--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,12 @@
   },
   "plugins": ["react", "@typescript-eslint", "prettier"],
   "rules": {
+    "@typescript-eslint/no-empty-function": ["error", { "allow": ["methods", "arrowFunctions"] }],
+    "@typescript-eslint/no-unused-vars": ["error"],
+    "@typescript-eslint/no-explicit-any": ["warn"],
+    "no-console": ["warn"],
+    "no-debugger": ["error"],
+    "@typescript-eslint/explicit-module-boundary-types": "off",
     "no-undef": ["off"],
     "import/no-extraneous-dependencies": "off",
     "react/react-in-jsx-scope": ["off"],
