--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,7 +29,7 @@
     "@typescript-eslint/no-explicit-any": ["warn"],
     "no-console": ["warn"],
     "no-debugger": ["error"],
-    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/explicit-module-boundary-types": ["off"],
     "no-undef": ["off"],
     "import/no-extraneous-dependencies": "off",
     "react/react-in-jsx-scope": ["off"],
