--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,7 @@
     "sourceType": "module",
     "project": "./tsconfig.json"
   },
-  "plugins": ["react", "@typescript-eslint", "prettier"],
+  "plugins": ["react", "@typescript-eslint", "prettier", "unused-imports"],
   "rules": {
     "@typescript-eslint/no-empty-function": ["error", { "allow": ["methods", "arrowFunctions"] }],
     "@typescript-eslint/no-unused-vars": ["error"],
@@ -30,6 +30,7 @@
     "no-console": ["warn"],
     "no-debugger": ["error"],
     "@typescript-eslint/explicit-module-boundary-types": ["off"],
+    "unused-imports/no-unused-imports": ["error"],
     "no-undef": ["off"],
     "import/no-extraneous-dependencies": "off",
     "react/react-in-jsx-scope": ["off"],
