amplify env config updated

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -7,20 +7,5 @@
     }
   },
   "auth": {},
-  "api": {
-    "backend": {
-      "service": "API Gateway",
-      "providerPlugin": "awscloudformation",
-      "dependsOn": [
-        {
-          "category": "function",
-          "resourceName": "getPaperInfo",
-          "attributes": [
-            "Name",
-            "Arn"
-          ]
-        }
-      ]
-    }
-  }
+  "api": {}
 }
