--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,4 +1,7 @@
 {
+  "providers": [
+    "awscloudformation"
+  ],
   "projectName": "smarticle",
   "version": "3.1",
   "frontend": "javascript",
@@ -10,6 +13,5 @@
       "BuildCommand": "npm.cmd run-script build",
       "StartCommand": "npm.cmd run-script start"
     }
-  },
-  "providers": ["awscloudformation"]
+  }
 }
