Implemented getPaperInfo in node.js

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -7,5 +7,17 @@
     }
   },
   "auth": {},
-  "api": {}
+  "api": {
+    "backend": {
+      "service": "API Gateway",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": [
+        {
+          "category": "function",
+          "resourceName": "getPaperInfo",
+          "attributes": ["Name", "Arn"]
+        }
+      ]
+    }
+  }
 }
