getKnowledgeGraph endpoint development

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -4,6 +4,11 @@
       "build": true,
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
+    },
+    "getKnowledgeGraph": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
     }
   },
   "auth": {},
@@ -15,7 +20,10 @@
         {
           "category": "function",
           "resourceName": "getPaperInfo",
-          "attributes": ["Name", "Arn"]
+          "attributes": [
+            "Name",
+            "Arn"
+          ]
         }
       ]
     }
