--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,6 @@ amplifytools.xcconfig
 **.sample
 #amplify-do-not-edit-end
 amplify/team-provider-info.json
+amplify/team-provider-info.json
+amplify/team-provider-info.json
+amplify/team-provider-info.json
