--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -25,18 +25,12 @@
         {
           "category": "function",
           "resourceName": "getPaperInfo",
-          "attributes": [
-            "Name",
-            "Arn"
-          ]
+          "attributes": ["Name", "Arn"]
         },
         {
           "category": "function",
           "resourceName": "getSummaryInfo",
-          "attributes": [
-            "Name",
-            "Arn"
-          ]
+          "attributes": ["Name", "Arn"]
         }
       ]
     }
