--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aws-sdk": "^2.1253.0",
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
+    "pdfjs-dist": "^3.1.81",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
