--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -9,6 +9,11 @@
       "build": true,
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
+    },
+    "getSummaryInfo": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
     }
   },
   "auth": {},
@@ -20,10 +25,12 @@
         {
           "category": "function",
           "resourceName": "getPaperInfo",
-          "attributes": [
-            "Name",
-            "Arn"
-          ]
+          "attributes": ["Name", "Arn"]
+        },
+        {
+          "category": "function",
+          "resourceName": "getSummaryInfo",
+          "attributes": ["Name", "Arn"]
         }
       ]
     }
