--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -3,17 +3,33 @@
     "getPaperInfo": {
       "build": true,
       "providerPlugin": "awscloudformation",
-      "service": "Lambda"
+      "service": "Lambda",
+      "dependsOn": []
     },
     "getKnowledgeGraph": {
       "build": true,
       "providerPlugin": "awscloudformation",
-      "service": "Lambda"
+      "service": "Lambda",
+      "dependsOn": []
     },
     "getSummaryInfo": {
       "build": true,
       "providerPlugin": "awscloudformation",
-      "service": "Lambda"
+      "service": "Lambda",
+      "dependsOn": [
+        {
+          "category": "function",
+          "resourceName": "smarticlelayer",
+          "attributes": [
+            "Arn"
+          ]
+        }
+      ]
+    },
+    "smarticlelayer": {
+      "providerPlugin": "awscloudformation",
+      "service": "LambdaLayer",
+      "build": true
     }
   },
   "auth": {},
