react base setup reference component

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -8,9 +8,7 @@
         {
           "category": "function",
           "resourceName": "smarticlelayer",
-          "attributes": [
-            "Arn"
-          ]
+          "attributes": ["Arn"]
         }
       ]
     },
@@ -22,9 +20,7 @@
         {
           "category": "function",
           "resourceName": "smarticlelayer",
-          "attributes": [
-            "Arn"
-          ]
+          "attributes": ["Arn"]
         }
       ]
     },
@@ -36,9 +32,7 @@
         {
           "category": "function",
           "resourceName": "smarticlelayer",
-          "attributes": [
-            "Arn"
-          ]
+          "attributes": ["Arn"]
         }
       ]
     },
@@ -57,18 +51,12 @@
         {
           "category": "function",
           "resourceName": "getPaperInfo",
-          "attributes": [
-            "Name",
-            "Arn"
-          ]
+          "attributes": ["Name", "Arn"]
         },
         {
           "category": "function",
           "resourceName": "getSummaryInfo",
-          "attributes": [
-            "Name",
-            "Arn"
-          ]
+          "attributes": ["Name", "Arn"]
         }
       ]
     }
