--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "aws-sdk": "^2.1253.0",
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
+    "cytoscape": "^3.2.19",
     "pdfjs-dist": "^3.1.81",
     "react": "^18.2.0",
+    "react-cytoscape": "^1.0.6",
+    "react-cytoscapejs": "^2.0.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
@@ -52,6 +55,8 @@
     ]
   },
   "devDependencies": {
+    "@types/cytoscape": "^3.19.9",
+    "@types/react-cytoscapejs": "^1.2.2",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
     "eslint": "^8.26.0",
