--- a/amplify/backend/function/getSummaryInfo/src/package.json
+++ b/amplify/backend/function/getSummaryInfo/src/package.json
@@ -6,5 +6,9 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.92"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.1261.0",
+    "axios": "^1.2.0"
   }
 }
