Changes to the knowledge graph lambda adding the layers and creating api endpoint

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -69,6 +69,14 @@
             "Name",
             "Arn"
           ]
+        },
+        {
+          "category": "function",
+          "resourceName": "getKnowledgeGraph",
+          "attributes": [
+            "Name",
+            "Arn"
+          ]
         }
       ]
     }
