--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/pdfjs-dist": "^2.10.378",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@use-gesture/react": "^10.2.23",
     "aws-amplify": "^5.0.4",
     "aws-sdk": "^2.1253.0",
     "axios": "^1.1.3",
