--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,5 +1,7 @@
 {
-  "providers": ["awscloudformation"],
+  "providers": [
+    "awscloudformation"
+  ],
   "projectName": "smarticle",
   "version": "3.1",
   "frontend": "javascript",
